--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Meri Pehli Website</title>
+  <title>Click Button</title>
   <style>
     body {
-      font-family: sans-serif;
       text-align: center;
       margin-top: 100px;
-      background-color: #f0f0f0;
     }
-    h1 {
-      color: #2c3e50;
+    button {
+      background: #1abc9c;
+      color: white;
+      padding: 15px 25px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
     }
-    p {
-      color: #555;
+    button:hover {
+      background: #16a085;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to My Website!</h1>
-  <p>Yeh website GitHub Pages pe live ho gayi hai 🎉</p>
+  <h1>Press the Magic Button</h1>
+  <button onclick="alert('You clicked it!')">Click Me</button>
 </body>
 </html>
