--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Click Button</title>
+  <title>Dark Theme</title>
   <style>
     body {
+      background-color: #121212;
+      color: #fff;
       text-align: center;
-      margin-top: 100px;
+      padding-top: 100px;
+      font-family: monospace;
     }
-    button {
-      background: #1abc9c;
-      color: white;
-      padding: 15px 25px;
-      font-size: 18px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #16a085;
+    h1 {
+      color: #00ffff;
     }
   </style>
 </head>
 <body>
-  <h1>Press the Magic Button</h1>
-  <button onclick="alert('You clicked it!')">Click Me</button>
+  <h1>Welcome to the Dark Side 😈</h1>
+  <p>This is a dark themed GitHub Pages site.</p>
 </body>
 </html>
