--- a/index.html
+++ b/index.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dark Theme</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Aryan's Web Page</title>
   <style>
     body {
-      background-color: #121212;
-      color: #fff;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #2c3e50, #3498db);
+      color: white;
       text-align: center;
-      padding-top: 100px;
-      font-family: monospace;
+      padding: 50px 20px;
     }
+
     h1 {
-      color: #00ffff;
+      font-size: 3em;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2em;
+      max-width: 600px;
+      margin: 0 auto 30px;
+    }
+
+    a.button {
+      display: inline-block;
+      padding: 15px 30px;
+      background: #f1c40f;
+      color: #2c3e50;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 10px;
+      transition: 0.3s ease;
+    }
+
+    a.button:hover {
+      background: #f39c12;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      opacity: 0.7;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to the Dark Side 😈</h1>
-  <p>This is a dark themed GitHub Pages site.</p>
+  <h1>Welcome to Aryan's Site</h1>
+  <p>This is a simple, clean, and stylish web page hosted on GitHub Pages.</p>
+  <a class="button" href="https://github.com/aryanka3801" target="_blank">Visit My GitHub</a>
+
+  <footer>
+    <p>Made with ❤️ by Aryan</p>
+  </footer>
 </body>
 </html>
