--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>3D Car with Device Rotation</title>
   <style>
-    body { margin: 0; overflow: hidden; background: #000; }
+    body { margin: 0; overflow: hidden; background: #111; }
     canvas { display: block; }
   </style>
 </head>
 <body>
 
-<!-- Three.js and GLTFLoader -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/examples/js/loaders/GLTFLoader.js"></script>
 
@@ -20,42 +20,68 @@ init();
 animate();
 
 function init() {
-  // Scene setup
   scene = new THREE.Scene();
-  camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
-  camera.position.z = 4;
 
-  renderer = new THREE.WebGLRenderer({antialias: true});
+  camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
+  camera.position.set(0, 1.5, 4);
+
+  renderer = new THREE.WebGLRenderer({ antialias: true });
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.body.appendChild(renderer.domElement);
 
-  // Light
-  const light = new THREE.HemisphereLight(0xffffff, 0x222222, 1.2);
-  scene.add(light);
+  // Lights
+  const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
+  hemiLight.position.set(0, 20, 0);
+  scene.add(hemiLight);
 
-  // Load car model
+  const dirLight = new THREE.DirectionalLight(0xffffff, 0.8);
+  dirLight.position.set(-3, 10, -10);
+  scene.add(dirLight);
+
+  // Ground
+  const ground = new THREE.Mesh(
+    new THREE.PlaneGeometry(200, 200),
+    new THREE.MeshPhongMaterial({ color: 0x222222, depthWrite: false })
+  );
+  ground.rotation.x = -Math.PI / 2;
+  ground.position.y = -1;
+  scene.add(ground);
+
+  // Load 3D Car Model
   const loader = new THREE.GLTFLoader();
   loader.load(
     'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMilkTruck/glTF/CesiumMilkTruck.gltf',
     function(gltf) {
       car = gltf.scene;
-      car.scale.set(0.5, 0.5, 0.5);
+      car.scale.set(0.4, 0.4, 0.4);
+      car.position.y = -1;
       scene.add(car);
     },
     undefined,
     function(error) {
-      console.error('Error loading car model:', error);
+      console.error("Failed to load car model:", error);
     }
   );
 
-  // Device rotation
-  window.addEventListener('deviceorientation', function(e) {
-    if (car) {
-      const beta = e.beta || 0;
-      const gamma = e.gamma || 0;
-      car.rotation.x = THREE.MathUtils.degToRad(beta);
-      car.rotation.y = THREE.MathUtils.degToRad(gamma);
-    }
+  // Device Orientation
+  if (window.DeviceOrientationEvent) {
+    window.addEventListener('deviceorientation', function(event) {
+      if (car) {
+        let beta = event.beta || 0;
+        let gamma = event.gamma || 0;
+        car.rotation.x = THREE.MathUtils.degToRad(beta);
+        car.rotation.y = THREE.MathUtils.degToRad(gamma);
+      }
+    });
+  } else {
+    console.log("Device orientation not supported");
+  }
+
+  // Resize handling
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth/window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
   });
 }
 
