--- a/index.html
+++ b/index.html
@@ -2,94 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D Car with Device Rotation</title>
+  <title>Welcome to My Site</title>
   <style>
-    body { margin: 0; overflow: hidden; background: #111; }
-    canvas { display: block; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(120deg, #1e3c72, #2a5298);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 3em;
+      margin-bottom: 0.2em;
+    }
+
+    p {
+      font-size: 1.5em;
+      margin: 0.5em 0 1.5em;
+    }
+
+    button {
+      padding: 0.8em 1.5em;
+      font-size: 1em;
+      border: none;
+      border-radius: 30px;
+      background-color: #ffffff;
+      color: #2a5298;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #dddddd;
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.160.1/examples/js/loaders/GLTFLoader.js"></script>
-
-<script>
-let scene, camera, renderer, car;
-
-init();
-animate();
-
-function init() {
-  scene = new THREE.Scene();
-
-  camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
-  camera.position.set(0, 1.5, 4);
-
-  renderer = new THREE.WebGLRenderer({ antialias: true });
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
-
-  // Lights
-  const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
-  hemiLight.position.set(0, 20, 0);
-  scene.add(hemiLight);
-
-  const dirLight = new THREE.DirectionalLight(0xffffff, 0.8);
-  dirLight.position.set(-3, 10, -10);
-  scene.add(dirLight);
-
-  // Ground
-  const ground = new THREE.Mesh(
-    new THREE.PlaneGeometry(200, 200),
-    new THREE.MeshPhongMaterial({ color: 0x222222, depthWrite: false })
-  );
-  ground.rotation.x = -Math.PI / 2;
-  ground.position.y = -1;
-  scene.add(ground);
-
-  // Load 3D Car Model
-  const loader = new THREE.GLTFLoader();
-  loader.load(
-    'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMilkTruck/glTF/CesiumMilkTruck.gltf',
-    function(gltf) {
-      car = gltf.scene;
-      car.scale.set(0.4, 0.4, 0.4);
-      car.position.y = -1;
-      scene.add(car);
-    },
-    undefined,
-    function(error) {
-      console.error("Failed to load car model:", error);
-    }
-  );
-
-  // Device Orientation
-  if (window.DeviceOrientationEvent) {
-    window.addEventListener('deviceorientation', function(event) {
-      if (car) {
-        let beta = event.beta || 0;
-        let gamma = event.gamma || 0;
-        car.rotation.x = THREE.MathUtils.degToRad(beta);
-        car.rotation.y = THREE.MathUtils.degToRad(gamma);
-      }
-    });
-  } else {
-    console.log("Device orientation not supported");
-  }
-
-  // Resize handling
-  window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth/window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-  });
-}
-
-function animate() {
-  requestAnimationFrame(animate);
-  renderer.render(scene, camera);
-}
-</script>
+  <h1>🚀 Welcome to My Website</h1>
+  <p>This is a cool responsive page. Simple. Clean. Stylish.</p>
+  <button onclick="alert('Thank you for clicking!')">Click Me!</button>
 
 </body>
 </html>
